--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "source.fixAll.tslint": true,
         // For Stylelint
         "source.fixAll.stylelint": true
-    }
+    },
+    "liveServer.settings.port": 5501
 }
