--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,13 @@
 {
-    "editor.formatOnSave": true,
-    "javascript.format.enable": true,
+    "editor.formatOnSave": false,
+    "javascript.format.enable": false,
     "editor.codeActionsOnSave": {
         // For ESLint
-        "source.fixAll.eslint": true,
+        "source.fixAll.eslint": false,
         // For TSLint
-        "source.fixAll.tslint": true,
+        "source.fixAll.tslint": false,
         // For Stylelint
-        "source.fixAll.stylelint": true
+        "source.fixAll.stylelint": false
     },
     "liveServer.settings.port": 5501
 }
